2021-04-18  Charlie Zender  <zender@uci.edu>

	* Compile with clang-11 (links, though still segfaults on MacOS), and gcc (works on cori, glace)

2021-04-17  Charlie Zender  <zender@uci.edu>

	* Fix gcc and clang OpenMP linking in c++ and mie Makefiles

	* Look in ${DATA_RT} instead of /data/zender/aca for files

2020-05-20  Charlie Zender  <zender@uci.edu>

	* Fix OpenMP with clang

	* Update copyright from --2017 to --present

2019-09-05  Charlie Zender  <zender@uci.edu>

	* Finish implementing WaB08 refractive indices as default for h2o_ice
	  War84/95 indices are still accessible via aerosol type h2o_War84

2019-09-04  Charlie Zender  <zender@uci.edu>

	* Add WaB08 refractive indices, rename old tables _War84

2019-07-10  Charlie Zender  <zender@uci.edu>

	* Add wvn_rgl grid-type to generate wavelength grids that are regularly spaced in wavenumber

2019-07-09  Charlie Zender  <zender@uci.edu>

	* Consolidate warnings for spc_bbd_cls::eval()

2015-01-22  Charlie Zender  <zender@uci.edu>

	* ccc compiles, links, and executes well with clang on MacOSX

	* Ensure correct precedence of + and () ? : in mie_sln.cc thanks to clang

	* Deprecate "register" type as per clang recommendation

	* Add -std=c++11 to MacOSX to quiet clang

2014-07-04  Charlie Zender  <zender@uci.edu>

	* Test C++-11 features

2013-03-28  Charlie Zender  <zender@uci.edu>

	* Add stat() diagnostics invoked by ccc --tst=stat

2013-01-19  Charlie Zender  <zender@uci.edu>

	* Hardwire data_path="/data/zender/aca" to avoid initialization
	bug where fio::data_path was undefined when mnr/aer structures
	initialized. This hack may be caused by GCC g++ changing order
	of initialization of static namespace variables, which is
	something the C++ specification leaves undefined.
	It used to always work but broke over a year ago.

2012-03-27  Charlie Zender  <zender@uci.edu>

	* Add RRTM SW spectral grid

2012-03-23  Charlie Zender  <zender@uci.edu>

	* Add RRTM LW spectral grid
