@@ -1126,7 +1126,8 @@ alias skyglow='ssh -Y skyglow.ess.uci.edu'
 #alias jaws='ssh -Y jaws.ess.uci.edu'
 alias katabatic='ssh -Y katabatic.ess.uci.edu'
 alias mactex='eval "$(/usr/libexec/path_helper)"'
-alias audio='sudo killall coreaudiod # Then kill Chrome, then repeat, then use Zoom to reset audio'
+alias texinfo='eval "PATH=/usr/local/Cellar/texinfo/6.7/bin:${PATH}"'
+alias audio='sudo killall coreaudiod # kill Chrome and Zoom, audio, restart Zoom, let it reset audio, then re-start Chrome'
 alias rigb='ssh -Y rigb.ess.uci.edu'
 alias glace='ssh -Y glace.ess.uci.edu'
 alias greenplanet='ssh -Y gplogin2.ps.uci.edu'
