@@ -1,3 +1,7 @@
+2021-06-18  Charlie Zender  <zender@uci.edu>
+
+	* Implement user-specifiable surface emissivity via --msv_sfc for flx_sfc_lnd()
+
 2019-09-05  Charlie Zender  <zender@uci.edu>
 
 	* Finish implementing WaB08 refractive indices as default for h2o_ice
