@@ -1,3 +1,9 @@
+2021-06-18  Charlie Zender  <zender@uci.edu>
+
+	* Implement user-specifiable surface emissivity via --msv_sfc for flx_sfc_lnd()
+
+	* Switch to Homebrew
+
 2021-04-18  Charlie Zender  <zender@uci.edu>
 
 	* Compile with clang-11 (links, though still segfaults on MacOS), and gcc (works on cori, glace)
